--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Chat</title>
+    <title>Bug free</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
