--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132827958880718"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
